tests/Tree/negative/test012.jvt
-- calling unsupported anoma-verify-detached

function main() : * {
  anoma-verify-detached(1,2,3)
}
